# TritonExp

./: README.md  prepare.sh  riscv64.toolchain.cmake
loop_serialization/: CMakeLists.txt
loop_serialization/include/: CMakeLists.txt  Passes.h  Passes.td
loop_serialization/lib/: CMakeLists.txt  LoopSerialization.cpp
loop_serialization/tools/: CMakeLists.txt  loopSerialization.cpp
output/: kernel.cpp  kernel.s  ll.ll  ll.mlir  main.cxx  scf.mlir  scf_after.mlir  ttir.mlir
triton_kernel_launcher/: driver.py  matmul.py  matmul_after.py  rewriter.py  softmax.py  softmax_after.py  vec_add.py  vec_add_after.py
triton_shared/backend/: compiler.py  compiler_standalone.py  driver.py  driver_standalone.py
